# poc-atlantis

./: .gitignore  README.md  pyproject.toml
data/data_processed/: results_hybrid_approach_kmeans_filter_v3.parquet
notebooks/: 01_analisis_calidad_datos.ipynb
src/frontend/: app_streamlit.py  requirements.txt
