[tool.poetry]
name = "15-poc-bancoatlantis"
version = "0.1.0"
description = "Poc Atlantis"
authors = ["Santiago Higuita <santiagohiguitau1030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
ipykernel = "^6.29.5"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
